{
    "name": "InputActions",
    "maps": [
        {
            "name": "Player",
            "id": "f5a0437c-f685-4708-931d-7e129c827b97",
            "actions": [
                {
                    "name": "Walk",
                    "type": "Value",
                    "id": "6019ef28-4448-4fe5-bbc0-9919a5557233",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "6185d3cc-9e37-4244-adc8-015fa2332348",
                    "path": "<Gamepad>/leftStick",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Walk",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}